Improved javascript object detection