@@ -21,41 +21,50 @@
 package org.lobobrowser.js;
 
 import java.lang.reflect.Method;
+import java.util.logging.Level;
 import java.util.logging.Logger;
 
 import org.mozilla.javascript.EvaluatorException;
 import org.mozilla.javascript.Function;
 import org.mozilla.javascript.Scriptable;
 import org.mozilla.javascript.ScriptableObject;
-import org.mozilla.javascript.WrappedException;
 
 public class JavaObjectWrapper extends ScriptableObject {
 
-	private static final Logger logger = Logger.getLogger(JavaObjectWrapper.class.getName());
+	/** The Constant serialVersionUID. */
 	private static final long serialVersionUID = 1L;
 
-	public static Function getConstructor(String className, JavaClassWrapper classWrapper, Scriptable scope) {
-		return new JavaConstructorObject(className, classWrapper);
-	}
+	/** The Constant logger. */
+	private static final Logger logger = Logger.getLogger(JavaObjectWrapper.class.getName());
 
-	public static Function getConstructor(String className, JavaClassWrapper classWrapper, Scriptable scope,
-			JavaInstantiator instantiator) {
-		return new JavaConstructorObject(className, classWrapper, instantiator);
-	}
-
-	private final JavaClassWrapper classWrapper;
-
+	/** The delegate. */
 	private final Object delegate;
 
+	/** The class wrapper. */
+	private final JavaClassWrapper classWrapper;
+
+	/**
+	 * Instantiates a new java object wrapper.
+	 *
+	 * @param classWrapper the class wrapper
+	 * @throws InstantiationException the instantiation exception
+	 * @throws IllegalAccessException the illegal access exception
+	 */
 	public JavaObjectWrapper(JavaClassWrapper classWrapper) throws InstantiationException, IllegalAccessException {
 		this.classWrapper = classWrapper;
 		// Retaining a strong reference, but note
 		// that the object wrapper map uses weak keys
 		// and weak values.
-		final Object delegate = this.classWrapper.newInstance();
+		Object delegate = this.classWrapper.newInstance();
 		this.delegate = delegate;
 	}
 
+	/**
+	 * Instantiates a new java object wrapper.
+	 *
+	 * @param classWrapper the class wrapper
+	 * @param delegate     the delegate
+	 */
 	public JavaObjectWrapper(JavaClassWrapper classWrapper, Object delegate) {
 		if (delegate == null) {
 			throw new IllegalArgumentException("Argument delegate cannot be null.");
@@ -67,84 +76,116 @@ public class JavaObjectWrapper extends ScriptableObject {
 		this.delegate = delegate;
 	}
 
+	/**
+	 * Gets the java object.
+	 *
+	 * @return the java object
+	 */
+	public Object getJavaObject() {
+		// Cannot retain delegate with a strong reference.
+		return this.delegate;
+	}
+
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.mozilla.javascript.ScriptableObject#getClassName()
+	 */
+	@Override
+	public String getClassName() {
+		return this.classWrapper.getClassName();
+	}
+
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.mozilla.javascript.ScriptableObject#get(int,
+	 * org.mozilla.javascript.Scriptable)
+	 */
 	@Override
 	public Object get(int index, Scriptable start) {
-		final PropertyInfo pinfo = this.classWrapper.getIntegerIndexer();
+		PropertyInfo pinfo = this.classWrapper.getIntegerIndexer();
 		if (pinfo == null) {
 			return super.get(index, start);
 		} else {
 			try {
-				final Method getter = pinfo.getGetter();
+				Method getter = pinfo.getGetter();
 				if (getter == null) {
 					throw new EvaluatorException("Indexer is write-only");
 				}
 				// Cannot retain delegate with a strong reference.
-				final Object javaObject = getJavaObject();
+				Object javaObject = this.getJavaObject();
 				if (javaObject == null) {
 					throw new IllegalStateException("Java object (class=" + this.classWrapper + ") is null.");
 				}
-				final Object raw = getter.invoke(javaObject, new Object[] { new Integer(index) });
-				if (raw == null) {
-					// Return this instead of null.
-					return Scriptable.NOT_FOUND;
+				Object raw = getter.invoke(javaObject, new Object[] { Integer.valueOf(index) });
+				if (raw != null) {
+					return JavaScript.getInstance().getJavascriptObject(raw, this.getParentScope());
 				}
-				return JavaScript.getInstance().getJavascriptObject(raw, getParentScope());
-			} catch (final Exception err) {
-				throw new WrappedException(err);
+			} catch (Exception err) {
+				logger.log(Level.SEVERE, err.getMessage(), err);
 			}
 		}
+		return Scriptable.NOT_FOUND;
 	}
 
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.mozilla.javascript.ScriptableObject#get(java.lang.String,
+	 * org.mozilla.javascript.Scriptable)
+	 */
 	@Override
 	public Object get(String name, Scriptable start) {
-		final PropertyInfo pinfo = this.classWrapper.getProperty(name);
+		PropertyInfo pinfo = this.classWrapper.getProperty(name);
 		if (pinfo != null) {
-			final Method getter = pinfo.getGetter();
+			Method getter = pinfo.getGetter();
 			if (getter == null) {
 				throw new EvaluatorException("Property '" + name + "' is not readable");
 			}
 			try {
 				// Cannot retain delegate with a strong reference.
-				final Object javaObject = getJavaObject();
+				Object javaObject = this.getJavaObject();
 				if (javaObject == null) {
 					throw new IllegalStateException("Java object (class=" + this.classWrapper + ") is null.");
 				}
-				final Object val = getter.invoke(javaObject, (Object[]) null);
+				Object val = getter.invoke(javaObject, (Object[]) null);
 				return JavaScript.getInstance().getJavascriptObject(val, start.getParentScope());
-			} catch (final Exception err) {
-				throw new WrappedException(err);
+			} catch (Exception err) {
+				logger.log(Level.SEVERE, err.getMessage(), err);
+				return new Object();
 			}
 		} else {
-			final Function f = this.classWrapper.getFunction(name);
+			Function f = this.classWrapper.getFunction(name);
 			if (f != null) {
 				return f;
 			} else {
 				// Should check properties set in context
 				// first. Consider element IDs should not
 				// override Window variables set by user.
-				final Object result = super.get(name, start);
+				Object result = super.get(name, start);
 				if (result != Scriptable.NOT_FOUND) {
 					return result;
 				}
-				final PropertyInfo ni = this.classWrapper.getNameIndexer();
+				PropertyInfo ni = this.classWrapper.getNameIndexer();
 				if (ni != null) {
-					final Method getter = ni.getGetter();
+					Method getter = ni.getGetter();
 					if (getter != null) {
 						// Cannot retain delegate with a strong reference.
-						final Object javaObject = getJavaObject();
+						Object javaObject = this.getJavaObject();
 						if (javaObject == null) {
 							throw new IllegalStateException("Java object (class=" + this.classWrapper + ") is null.");
 						}
 						try {
-							final Object val = getter.invoke(javaObject, new Object[] { name });
+							Object val = getter.invoke(javaObject, new Object[] { name });
 							if (val == null) {
 								// There might not be an indexer setter.
 								return super.get(name, start);
 							} else {
 								return JavaScript.getInstance().getJavascriptObject(val, start.getParentScope());
 							}
-						} catch (final Exception err) {
-							throw new WrappedException(err);
+						} catch (Exception err) {
+							logger.log(Level.SEVERE, err.getMessage(), err);
 						}
 					}
 				}
@@ -153,22 +194,122 @@ public class JavaObjectWrapper extends ScriptableObject {
 		}
 	}
 
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.mozilla.javascript.ScriptableObject#put(int,
+	 * org.mozilla.javascript.Scriptable, java.lang.Object)
+	 */
 	@Override
-	public String getClassName() {
-		return this.classWrapper.getClassName();
+	public void put(int index, Scriptable start, Object value) {
+		PropertyInfo pinfo = this.classWrapper.getIntegerIndexer();
+		if (pinfo == null) {
+			super.put(index, start, value);
+		} else {
+			try {
+				Method setter = pinfo.getSetter();
+				if (setter == null) {
+					throw new EvaluatorException("Indexer is read-only");
+				}
+				Object actualValue;
+				actualValue = JavaScript.getInstance().getJavaObject(value, pinfo.getPropertyType());
+				setter.invoke(this.getJavaObject(), new Object[] { Integer.valueOf(index), actualValue });
+			} catch (Exception err) {
+				logger.log(Level.SEVERE, err.getMessage(), err);
+			}
+		}
 	}
 
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.mozilla.javascript.ScriptableObject#put(java.lang.String,
+	 * org.mozilla.javascript.Scriptable, java.lang.Object)
+	 */
 	@Override
-	public java.lang.Object getDefaultValue(java.lang.Class hint) {
+	public void put(String name, Scriptable start, Object value) {
+		if (value instanceof org.mozilla.javascript.Undefined) {
+			super.put(name, start, value);
+		} else {
+			PropertyInfo pinfo = this.classWrapper.getProperty(name);
+			if (pinfo != null) {
+				Method setter = pinfo.getSetter();
+				if (setter == null) {
+					throw new EvaluatorException(
+							"Property '" + name + "' is not settable in " + this.classWrapper.getClassName() + ".");
+				}
+				try {
+					Object actualValue;
+					actualValue = JavaScript.getInstance().getJavaObject(value, pinfo.getPropertyType());
+					setter.invoke(this.getJavaObject(), new Object[] { actualValue });
+				} catch (IllegalArgumentException err) {
+					logger.log(Level.SEVERE, err.getMessage(), err);
+				} catch (Exception err) {
+					logger.log(Level.SEVERE, err.getMessage(), err);
+				}
+			} else {
+				PropertyInfo ni = this.classWrapper.getNameIndexer();
+				if (ni != null) {
+					Method setter = ni.getSetter();
+					if (setter != null) {
+						try {
+							Object actualValue;
+							actualValue = JavaScript.getInstance().getJavaObject(value, ni.getPropertyType());
+							setter.invoke(this.getJavaObject(), new Object[] { name, actualValue });
+						} catch (Exception err) {
+							logger.log(Level.SEVERE, err.getMessage(), err);
+						}
+					} else {
+						super.put(name, start, value);
+					}
+				} else {
+					super.put(name, start, value);
+				}
+			}
+		}
+	}
 
+	/**
+	 * Gets the constructor.
+	 *
+	 * @param className    the class name
+	 * @param classWrapper the class wrapper
+	 * @param scope        the scope
+	 * @return the constructor
+	 */
+	public static Function getConstructor(String className, JavaClassWrapper classWrapper) {
+		return new JavaConstructorObject(className, classWrapper);
+	}
+
+	/**
+	 * Gets the constructor.
+	 *
+	 * @param className    the class name
+	 * @param classWrapper the class wrapper
+	 * @param scope        the scope
+	 * @param instantiator the instantiator
+	 * @return the constructor
+	 */
+	public static Function getConstructor(String className, JavaClassWrapper classWrapper,
+			JavaInstantiator instantiator) {
+		return new JavaConstructorObject(className, classWrapper, instantiator);
+	}
+
+	/*
+	 * (non-Javadoc)
+	 * 
+	 * @see org.mozilla.javascript.ScriptableObject#getDefaultValue(java.lang.Class)
+	 */
+	@Override
+	public Object getDefaultValue(Class hint) {
 		if (hint == null || String.class.equals(hint)) {
-			final Object javaObject = getJavaObject();
+			Object javaObject = this.getJavaObject();
 			if (javaObject == null) {
 				throw new IllegalStateException("Java object (class=" + this.classWrapper + ") is null.");
 			}
 			return javaObject.toString();
 		} else if (Number.class.isAssignableFrom(hint)) {
-			final Object javaObject = getJavaObject();
+			Object javaObject = this.getJavaObject();
 			if (javaObject instanceof Number) {
 				return javaObject;
 			} else if (javaObject instanceof String) {
@@ -181,85 +322,15 @@ public class JavaObjectWrapper extends ScriptableObject {
 		}
 	}
 
-	/**
-	 * Returns the Java object.
+	/*
+	 * (non-Javadoc)
 	 * 
-	 * @return An object or <code>null</code> if garbage collected.
+	 * @see java.lang.Object#toString()
 	 */
-	public Object getJavaObject() {
-		// Cannot retain delegate with a strong reference.
-		return this.delegate;
-	}
-
-	@Override
-	public void put(int index, Scriptable start, Object value) {
-		final PropertyInfo pinfo = this.classWrapper.getIntegerIndexer();
-		if (pinfo == null) {
-			super.put(index, start, value);
-		} else {
-			try {
-				final Method setter = pinfo.getSetter();
-				if (setter == null) {
-					throw new EvaluatorException("Indexer is read-only");
-				}
-				Object actualValue;
-				actualValue = JavaScript.getInstance().getJavaObject(value, pinfo.getPropertyType());
-				setter.invoke(getJavaObject(), new Object[] { new Integer(index), actualValue });
-			} catch (final Exception err) {
-				throw new WrappedException(err);
-			}
-		}
-	}
-
-	@Override
-	public void put(String name, Scriptable start, Object value) {
-		if (value instanceof org.mozilla.javascript.Undefined) {
-			super.put(name, start, value);
-		} else {
-			final PropertyInfo pinfo = this.classWrapper.getProperty(name);
-			if (pinfo != null) {
-				final Method setter = pinfo.getSetter();
-				if (setter == null) {
-					throw new EvaluatorException(
-							"Property '" + name + "' is not settable in " + this.classWrapper.getClassName() + ".");
-				}
-				try {
-					Object actualValue;
-					actualValue = JavaScript.getInstance().getJavaObject(value, pinfo.getPropertyType());
-					setter.invoke(getJavaObject(), new Object[] { actualValue });
-				} catch (final IllegalArgumentException iae) {
-					final Exception newException = new IllegalArgumentException(
-							"Property named '" + name + "' could not be set with value " + value + ".", iae);
-					throw new WrappedException(newException);
-				} catch (final Exception err) {
-					throw new WrappedException(err);
-				}
-			} else {
-				final PropertyInfo ni = this.classWrapper.getNameIndexer();
-				if (ni != null) {
-					final Method setter = ni.getSetter();
-					if (setter != null) {
-						try {
-							Object actualValue;
-							actualValue = JavaScript.getInstance().getJavaObject(value, ni.getPropertyType());
-							setter.invoke(getJavaObject(), new Object[] { name, actualValue });
-						} catch (final Exception err) {
-							throw new WrappedException(err);
-						}
-					} else {
-						super.put(name, start, value);
-					}
-				} else {
-					super.put(name, start, value);
-				}
-			}
-		}
-	}
-
 	@Override
 	public String toString() {
-		final Object javaObject = getJavaObject();
-		final String type = javaObject == null ? "<null>" : javaObject.getClass().getName();
-		return "JavaObjectWrapper[object=" + getJavaObject() + ",type=" + type + "]";
+		Object javaObject = this.getJavaObject();
+		String type = javaObject == null ? "<null>" : javaObject.getClass().getName();
+		return "JavaObjectWrapper[object=" + this.getJavaObject() + ",type=" + type + "]";
 	}
 }
